1. Changed format of TweetDownloader, now it returns iterable TwitterSearch object 2. Added jQuery and pagination script in it, implemented pagination 3. Removed field "number of results" as it serves no purpose now 4. Changed requirements so they accept the versions higher than needed

--- a/buzz_score_site/buzz_score/templates/index.html
+++ b/buzz_score_site/buzz_score/templates/index.html
@@ -3,9 +3,9 @@
 {% block title %} BuzzScore - Welcome {% endblock title %}
 
 {% block content %}
-<div>
+<div xmlns="http://www.w3.org/1999/html">
     Welcome to BuzzScore, test our brand new Emotional Evaluation!<br>
-    <form action="/tweets" method="post">{% csrf_token %}
+    <form action="/tweets/" method="post">{% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit" />
     </form>
