Refactored code, handling ajax queries

--- a/buzz_score_site/buzz_score/templates/tweets_page.html
+++ b/buzz_score_site/buzz_score/templates/tweets_page.html
@@ -3,4 +3,4 @@
         @{{ tweet.user.screen_name }} tweeted {{ tweet.text }}
     </p>
 {% endfor %}
-<a id='more-link' href='/tweets/'>more</a>
+<a id='more-link' href='/tweets_ajax/'>more</a>
