--- a/buzz_score_site/buzz_score/templates/index.html
+++ b/buzz_score_site/buzz_score/templates/index.html
@@ -3,9 +3,28 @@
 {% block title %} BuzzScore - Welcome {% endblock title %}
 
 {% block content %}
-    Welcome to BuzzScore, test our brand new Emotional Evaluation!<br>
-    <form action="/tweets/" method="post">{% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Submit" />
-    </form>
+    <div class="col-md-12">
+        <h2>Welcome to BuzzScore!</h2>
+        <h4>Test our brand new Sentiment Analysis!</h4>
+        <form action="/tweets/" method="post">{% csrf_token %}
+            <p>
+                <label for="id_search_query">Search query:</label>
+                <input id="id_search_query" maxlength="100" name="search_query" type="text" />
+                <input type="submit" value="Submit" />
+            </p>
+            <p>
+                <label for="id_search_language_0">Search language:</label>
+                <ul class="list-unstyled">
+                    <li>
+                        <label for="id_search_language_0">
+                            <input id="id_search_language_0" name="search_language" type="radio" value="en" checked/> en</label>
+                    </li>
+                    <li>
+                        <label for="id_search_language_1">
+                            <input id="id_search_language_1" name="search_language" type="radio" value="ru" /> ru</label>
+                    </li>
+                </ul>
+            </p>
+        </form>
+    </div>
 {% endblock content %}
