--- a/buzz_score_site/buzz_score/templates/tweets_index.html
+++ b/buzz_score_site/buzz_score/templates/tweets_index.html
@@ -5,8 +5,7 @@
 {% block content %}
     {% block scripts %}
         {{ block.super }}
-        <script type="application/javascript" src="{{ STATIC_URL }}js/jquery-1.10.2.min.js"></script>
-        <script src="{{ STATIC_URL }}js/pagination.js"></script>
+        <script src="{{ STATIC_URL }}content/js/pagination.js"></script>
         <script>$(document).ready(function() {
             $.paginate();
         })</script>
