Added some basic error handling due to problem indicated in http://dreamteam.myjetbrains.com/youtrack/issue/Buzz-20 (not found cookie value)

--- a/buzz_score_site/buzz_score/templates/error.html
+++ b/buzz_score_site/buzz_score/templates/error.html
@@ -5,5 +5,7 @@
 {% block content %}
 <div>
     {{ error_text }}
+    <br>
+    <a href="/tweets/">Back to the main page</a>
 </div>
 {% endblock content %}
