--- a/buzz_score_site/buzz_score/templates/tweets_index.html
+++ b/buzz_score_site/buzz_score/templates/tweets_index.html
@@ -6,7 +6,7 @@
     {% block scripts %}
         {{ block.super }}
         <script src="{{ STATIC_URL }}content/js/pagination.js"></script>
-        <script src="{{ STATIC_URL }}content/js/spin.js"></script>
+        <script src="{{ STATIC_URL }}content/js/spin.min.js"></script>
         <script src="{{ STATIC_URL }}content/js/jquery.spin.js"></script>
         <script src="{{ STATIC_URL }}content/js/spinner_scripts.js"></script>
         <script>$(document).ready(function() {
