Added a model class to present tweets in html, attributes for filtering and script for the same purpose

--- a/buzz_score_site/buzz_score/templates/tweets_page.html
+++ b/buzz_score_site/buzz_score/templates/tweets_page.html
@@ -1,6 +1,4 @@
 {% for tweet in tweets %}
-    <p>
-        @{{ tweet.user.screen_name }} tweeted {{ tweet.text }}
-    </p>
+    {{ tweet.as_html | safe }}
 {% endfor %}
 <a id='more-link' href='/tweets_ajax/'>more</a>
