Revert "Added a model class to present tweets in html, attributes for filtering and script for the same purpose"
This reverts commit 08df5d014097c8a7249aef398bd7509ff5642b02.

--- a/buzz_score_site/buzz_score/templates/tweets_index.html
+++ b/buzz_score_site/buzz_score/templates/tweets_index.html
@@ -9,13 +9,9 @@
         <script src="{{ STATIC_URL }}content/js/spin.min.js"></script>
         <script src="{{ STATIC_URL }}content/js/jquery.spin.js"></script>
         <script src="{{ STATIC_URL }}content/js/spinner_scripts.js"></script>
-        <script src="{{ STATIC_URL }}content/js/tweet_display_options_scripts.js"></script>
-        <script>
-            $(document).ready(function() {
-                $.paginate();
-            });
-        </script>
+        <script>$(document).ready(function() {
+            $.paginate();
+        })</script>
     {% endblock %}
-    <input type="button" name="toggleRetweetsButton" value="Toggle Retweets" onclick="toggleRetweets()">
     {% include "tweets_page.html" %}
 {% endblock %}
