--- a/buzz_score_site/buzz_score/templates/tweets_page.html
+++ b/buzz_score_site/buzz_score/templates/tweets_page.html
@@ -1,4 +1,6 @@
 {% for tweet in tweets %}
-    {{ tweet.as_html | safe }}
+    <p>
+        @{{ tweet.user.screen_name }} tweeted {{ tweet.text }}
+    </p>
 {% endfor %}
 <a id='more-link' href='/tweets_ajax/'>more</a>
