Moved functionality of dip laying tweets to a custom tag

--- a/buzz_score_site/buzz_score/templates/tweets_page.html
+++ b/buzz_score_site/buzz_score/templates/tweets_page.html
@@ -1,4 +1,5 @@
+{% load display_tweet %}
 {% for tweet in tweets %}
-    {{ tweet.as_html | safe }}
+    {% display_tweet %}
 {% endfor %}
 <a id='more-link' href='/tweets_ajax/'>more</a>
