Added sentiment analysis to all views, implemented checkbox elements to show/hide retweets, positive/negative tweets, moved back to static hosting of jquery (to ensure working with new versions)

--- a/buzz_score_site/buzz_score/templates/base.html
+++ b/buzz_score_site/buzz_score/templates/base.html
@@ -5,7 +5,7 @@
     <link href="{{ STATIC_URL }}content/css/base.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="{{ STATIC_URL }}content/js/jquery-1.10.2.min.js"></script>
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
 
     <title>{% block title %}BuzzScore - Index{% endblock %}</title>
