--- a/buzz_score_site/buzz_score/templates/tweets_index.html
+++ b/buzz_score_site/buzz_score/templates/tweets_index.html
@@ -17,23 +17,15 @@
         </script>
         <link href="{{ STATIC_URL }}content/css/tweet.css" rel="stylesheet" media="screen">
 
-        <script type="text/javascript">
-            function setToPositive() {
-                $('.tweet').each(function() {
-                    $(this).removeClass('positive negative').addClass('positive')
-                });
-            }
-
-            function setToNegative() {
-                $('.tweet').each(function() {
-                    $(this).removeClass('positive negative').addClass('negative')
-                });
-            }
-        </script>
 
     {% endblock %}
-    <input type="button" name="toggleRetweetsButton" value="Toggle Retweets" onclick="toggleRetweets()">
-    <input type="button" name="setAllToPositiveButton" value="Set Positive" onclick="setToPositive()"><br>
-    <input type="button" name="setAllToNegativeButton" value="Set Negative" onclick="setToNegative()">
+    <div id="settings">
+        <input type="checkbox" id="displayRetweetsCheckBox" onchange="handleRetweets()" checked>
+        <label> Display retweets </label> <br>
+        <input type="checkbox" id="displayPositiveTweetsCheckBox" onchange="handlePositiveTweets()" checked>
+        <label> Display positive tweets </label> <br>
+        <input type="checkbox" id="displayNegativeTweetsCheckBox" onchange="handleNegativeTweets()" checked>
+        <label> Display negative tweets </label> <br>
+    </div>
     {% include "tweets_page.html" %}
 {% endblock %}
